src/objects/MT_CampaignMonthlyPlanImportData__c.object
<CustomObject>
    <description>Import table for campaign monthly plan data from KRS.</description>
    <fields>
        <fullName>MT_Amount1__c</fullName>
        <label>Amount1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_Amount2__c</fullName>
        <label>Amount2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_Amount3__c</fullName>
        <label>Amount3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_BMVSponsoringComplete__c</fullName>
        <label>BMV Sponsoring Complete</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_BMVSpotComplete__c</fullName>
        <label>BMV Spot Complete</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_CampaignId__c</fullName>
        <label>CampaignId</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_DealProbabilitySpots__c</fullName>
        <label>Deal Probability Spots</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_Month__c</fullName>
        <label>Month</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_RevenueFix__c</fullName>
        <label>Revenue Fix</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_Year__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Media Campaign Monthly Plan Import Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MCMPID-{00000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Campaign Monthly Plan Import Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>